small fixes in schema, service output
