# schema/src/swagger.yaml
@@ -64,7 +64,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ILoginResult"
+                $ref: "#/components/schemas/IUserLoginResult"
 
   /chats:
     get:
@@ -189,7 +189,7 @@ components:
       required:
         - username
         - password
-    ILoginResult:
+    IUserLoginResult:
       type: object
       properties:
         success:
